typescript/checker/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName26.ts.stderr
error: TS1164
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName26.ts:4:5
  |
4 |     [e] = 0
  |     ^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            59,
        ),
        hi: BytePos(
            61,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName26.ts:5:6
  |
5 |     [e2] = 1
  |      ^^

